--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6457],[],[[4,0,0,[],[1,447,6008],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8758],[],[[4,0,0,[],[1,809,7946],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Labb-1","*C:\\Users\\samra\\OneDrive\\Desktop\\Lab-1\\Automatiserad-testning-Labb-1\\Labb-1.robot","*Labb-1.robot","*No unbooked car in the booking tabel"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Labb-1","*C:\\Users\\samra\\OneDrive\\Desktop\\Lab-1\\Automatiserad-testning-Labb-1\\Labb-1.robot","*Labb-1.robot","*Invalid date"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Labb-1","name":"Labb-1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Labb-1","name":"Labb-1","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1708800071246;
+window.output["baseMillis"] = 1708808067064;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6503;
+window.output["generated"] = 8821;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
